add class to Search button

--- a/templates/applications.j2
+++ b/templates/applications.j2
@@ -115,7 +115,7 @@
         {% endif %}
 
         </table>
-        <button class="btn-primary" onClick="searchApplication()">Search Applications</button>
+        <button class="btn btn-primary" onClick="searchApplication()">Search Applications</button>
         <p>&nbsp;</p>
     </div>
     <!-- END BROWSE -->
