--- a/templates/companies.j2
+++ b/templates/companies.j2
@@ -140,7 +140,7 @@
                 />
                 <div class="wrapper">
                     <!-- Create 'Add Company' and 'Cancel' buttons -->
-                    <input type="submit" value="Add Company" name="Add_Company" class="btn btn-primary" style="margin:.5rem;">
+                    <input type="submit" value="Add Company" name="Add_Company" class="btn new-btn" style="margin:.5rem;">
                     <a class="btn-anchor" href='/companies'>
                         <input class="btn" type="button" value="Cancel">
                     </a>
