--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -283,7 +283,7 @@
                 />
                 <div class="wrapper">
                     <!-- Create 'Add Position' and 'Cancel' buttons -->
-                    <input type="submit" value="Add Position" name="Add_Position" class="btn btn-primary" style="margin:.5rem;">
+                    <input type="submit" value="Add Position" name="Add_Position" class="btn new-btn" style="margin:.5rem;">
                     <a class="btn-anchor" href='/positionscompanyrecruiters'>
                         <input class="btn" type="button" value="Cancel">
                     </a>
@@ -312,7 +312,7 @@
                     </select>
                     <div class="wrapper">
                         <!-- Create 'Add Position and Recruiter Affiliation' and 'Cancel' buttons -->
-                        <input type="submit" value="Add Affiliation" name="Add_Affiliation" class="btn btn-primary" style="margin:.5rem;">
+                        <input type="submit" value="Add Affiliation" name="Add_Affiliation" class="btn new-btn" style="margin:.5rem;">
                         <a class="btn-anchor" href='/positionscompanyrecruiters'>
                             <input class="btn" type="button" value="Cancel">
                         </a>
@@ -381,7 +381,7 @@
                 />
                 <div class="wrapper">
                     <!-- Create 'Add Recruiter' and 'Cancel' buttons -->
-                    <input type="submit" value="Add Recruiter" name="Add_Recruiter" class="btn btn-primary" style="margin:.5rem;">
+                    <input type="submit" value="Add Recruiter" name="Add_Recruiter" class="btn new-btn" style="margin:.5rem;">
                     <a class="btn-anchor" href='/positionscompanyrecruiters'>
                         <input class="btn" type="button" value="Cancel">
                     </a>
