--- a/static/style.css
+++ b/static/style.css
@@ -3,17 +3,17 @@
 /* VARIABLES */
 
 :root {
-  --background-color: #E1E5F2;
-  --navbar-color: #012A4A;
-  --header-color: #022B3A;
-  --table-color: #1F7A8C;
-  --table-row-color: #E1E5F2;
+  --background-color: #eef4ed; /* #E1E5F2; */
+  --navbar-color: #022B3A; /* #012A4A; */
+  --header-color: #022B3A; /* #022B3A; */
+  --table-color: #1F7A8C; /* #1F7A8C; */
+  --table-row-color: #E1E5F2; /* #E1E5F2; */
 
   --link-color: #ff8500;
   --link-visited-color: #5a189a;
 
-  --delete-form-header-color: #660708;
-  --delete-form-color: #ba181b;
+  --delete-form-header-color: #4e0110; /* #660708; */
+  --delete-form-color: linear-gradient(to bottom, #c32530, #db222a); /* #db222a; */ /* #ba181b; */
 
   --button-border-color: #012A4A;
   --button-color-dark: #013A63;
@@ -21,15 +21,15 @@
   --button-color-light: #2C7DA0;
   --button-color-lighter: #61A5C2;
 
-  --update-button-border-color: #005c00;
-  --update-button-color-dark: #2d661b;
-  --update-button-color-medium: #2a850e;
-  --update-button-color-light: #27a300;
-  --update-button-color-lighter: #55a630;
+  --update-button-border-color: #10451d; /* #005c00; */
+  --update-button-color-dark: #155d27; /* #2d661b; */
+  --update-button-color-medium: #208b3a; /* #2a850e; */
+  --update-button-color-light: #25a244; /* #27a300; */
+  --update-button-color-lighter: #6ede8a; /* #55a630; */
 
-  --delete-button-border-color: #660708;
-  --delete-button-color-dark: #a4161a;
-  --delete-button-color-medium: #ba181b;
+  --delete-button-border-color: #4e0110; /* #660708; */
+  --delete-button-color-dark: #942b3b; /* #a4161a; */
+  --delete-button-color-medium: #ab2836; /* #ba181b; */
   --delete-button-color-light: #e5383b;
   --delete-button-color-lighter: #ff5a5f;
 
@@ -461,8 +461,11 @@ fieldset > h3 {
 #deleteApplication > fieldset > .form-head,
 #deleteCompany > fieldset > .form-head,
 #deleteAffiliation > fieldset > .form-head {
-  background-color: var(--delete-form-color);
+  /* background-color: var(--delete-form-color); */
+  background: var(--delete-form-color);
   margin-bottom: 8px;
+  letter-spacing: 0.8px;
+  font-weight: 500;
   /* font-weight: 500;
   padding-bottom: 5px;
   color: #f94144; */
