--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -138,7 +138,7 @@
 
                 <div class="wrapper">
                     <!-- Create 'Add Applicant' and 'Cancel' buttons -->
-                    <input type="submit" value="Add Applicant" name="Add_Applicant" class="btn btn-primary" style="margin:.5rem;">
+                    <input type="submit" value="Add Applicant" name="Add_Applicant" class="btn new-btn" style="margin:.5rem;">
                     <a class="btn-anchor" href='/applicants'>
                         <input class="btn" type="button" value="Cancel">
                     </a>
