--- a/templates/applications.j2
+++ b/templates/applications.j2
@@ -175,7 +175,7 @@
                 />
                 <div class="wrapper">
                     <!-- Create 'Add Application' and 'Cancel' buttons -->
-                    <input type="submit" value="Add Application" name="Add_Application" class="btn btn-primary" style="margin:.5rem;">
+                    <input type="submit" value="Add Application" name="Add_Application" class="btn new-btn" style="margin:.5rem;">
                     <a class="btn-anchor" href='/applications'>
                         <input class="btn" type="button" value="Cancel">
                     </a>
