--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -85,7 +85,7 @@
 
 <body>
     <div class="header">
-        <h1>Positions & Company Recruiters</h1>
+        <h1>Positions & Recruiters</h1>
         <div class="navbar">
             <a href="/">Home</a> |
             <a href="/applicants">Applicants</a> |
