--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="header">
-        <h1>DreamOffer</h1>
+        <h1 id="logo"><span id="moon">&#9789;</span>reamOffer</h1>
         <div class="navbar">
             <a href="/">Home</a> |
             <a href="/applicants">Applicants</a> |
