--- a/templates/companies.j2
+++ b/templates/companies.j2
@@ -90,7 +90,7 @@
 
                     <!-- Create a <td> element with the value of that key in it -->
                     {% if key == 'website' %}
-                        <td><a href="{{item[key]}}"> {{item[key]}}</a> </td>
+                        <td><a class="link" href="{{item[key]}}"> {{item[key]}}</a> </td>
                     {% else %}
                     <td> {{item[key]}} </td> 
                     {% endif %}
