--- a/static/style.css
+++ b/static/style.css
@@ -97,7 +97,8 @@ input {
 
 /* TYPOGRAPHY STYLES */
 
-body > .wrapper {
+body > .home-wrapper {
+  margin-top: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -107,29 +108,84 @@ body > .wrapper {
   font-size: 42px;
 }
 
-.title {
+.home-title {
   margin: 25px 0;
   text-align: center;
-  font-size: 28px;
+  font-size: 48px;
   color: var(--header-color);
   position: relative;
   width: max-content;
 }
 
-.title::after {
+.home-title::after {
   content: "";
   background: var(--header-color);
   position: absolute;
   bottom: -10px;
-  left: 0;
-  width: 100%;
-  height: 2px;
+  right: -50px;
+  width: 2px;
+  height: 110%;
 }
 
-.wrapper + p {
+.home-wrapper > .home-description {
   padding: 0 150px 25px;
   font-size: 18px;
   text-align: justify;
+  width: 80%;
+  line-height: 1.4;
+}
+
+#inline-items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 5%;
+  margin-top: -1%;
+}
+
+.emphasis {
+  font-size: 60px;
+}
+
+#constellation1,
+#constellation2 {
+  display: grid;
+  width: 3%;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 12px 20px;
+  grid-gap: 2px;
+}
+
+#constellation1 {
+  margin-right: 8%;
+}
+
+#constellation2 {
+  margin-left: 2.5%;
+}
+
+.star1,
+.star2,
+.star3 {
+  font-size: 18px;
+}
+
+.star1 {
+  grid-column: 1 / 3;
+  opacity: 1;
+  animation: sparkle1 1.2s linear infinite;
+}
+
+.star2 {
+  opacity: 0.6;
+  /* font-size: 16px; */
+  animation: sparkle2 1.2s linear infinite;
+}
+
+.star3 {
+  opacity: 0.3;
+  /* font-size: 14px; */
+  animation: sparkle3 1.2s linear infinite;
 }
 
 div > h3 {
@@ -195,7 +251,7 @@ tbody > tr > td > .link:visited {
 .header {
   background-color: var(--navbar-color);
   color: white;
-  padding: 12px 15px;
+  padding: 12px 15px 12px 25px;
   display: flex;
   justify-content: space-between;
 }
@@ -213,7 +269,7 @@ tbody > tr > td > .link:visited {
 }
 
 .navbar {
-  width: 50%;
+  width: 60%;
   align-self: center;
   display: flex;
   justify-content: space-around;
@@ -258,7 +314,7 @@ tbody > tr > td > .link:visited {
 
 @media only screen and (max-width: 1300px) {
   .navbar {
-    width: 65%;
+    width: 68%;
     font-size: 16px;
     margin-right: 5px;
   }
@@ -270,12 +326,28 @@ tbody > tr > td > .link:visited {
 
 @media only screen and (max-width: 1000px) {
   .navbar {
+    width: 72.5%;
     font-size: 12px;
     margin-right: 5px;
   }
 
+  .header {
+    padding: 8px 11px 8px 15px;
+  }
+
   .header > h1 {
     font-size: 16px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .navbar {
+    width: 80%;
+    margin-right: 1px;
+  }
+
+  .header {
+    padding: 6px 7px 6px 10px;
   }
 }
 
@@ -645,5 +717,88 @@ fieldset > .wrapper {
 
   fieldset > h3 {
     font-size: 14px;
+  }
+}
+
+/* ANIMATIONS */
+
+@keyframes sparkle1 {
+  0% {
+    opacity: 1;
+    /* font-size: 18px; */
+  }
+  20% {
+    opacity: 0.6;
+    /* font-size: 16px; */
+  }
+  40% {
+    opacity: 0.3;
+    /* font-size: 14px; */
+  }
+  60% {
+    opacity: 0;
+    /* font-size: 12px; */
+  }
+  80% {
+    opacity: 0.3;
+    /* font-size: 14px; */
+  }
+  100% {
+    opacity: 0.6;
+    /* font-size: 16px; */
+  }
+}
+
+@keyframes sparkle2 {
+  0% {
+    opacity: 0.6;
+    /* font-size: 18px; */
+  }
+  20% {
+    opacity: 0.3;
+    /* font-size: 16px; */
+  }
+  40% {
+    opacity: 0;
+    /* font-size: 14px; */
+  }
+  60% {
+    opacity: 0.3;
+    /* font-size: 12px; */
+  }
+  80% {
+    opacity: 0.6;
+    /* font-size: 14px; */
+  }
+  100% {
+    opacity: 1;
+    /* font-size: 16px; */
+  }
+}
+
+@keyframes sparkle3 {
+  0% {
+    opacity: 0.3;
+    /* font-size: 18px; */
+  }
+  20% {
+    opacity: 0;
+    /* font-size: 16px; */
+  }
+  40% {
+    opacity: 0.3;
+    /* font-size: 14px; */
+  }
+  60% {
+    opacity: 0.6;
+    /* font-size: 12px; */
+  }
+  80% {
+    opacity: 1;
+    /* font-size: 14px; */
+  }
+  100% {
+    opacity: 0.6;
+    /* font-size: 16px; */
   }
 }
