add star symbols

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,22 +18,50 @@
         </div>
     </div>
 
-    <div class="wrapper">
-        <h2 class="title">Every offer starts as a dream.</h2>
-    </div>
+    <div class="home-wrapper">
+        <h2 class="home-title">Every offer starts as a 
+            <span id="inline-items">
+                <div id="constellation1">
+                    <span class="star1">
+                    &#10022;
+                </span>
+                <span class="star2">  
+                    &#10022;
+                </span>
+                    <span class="star3">  
+                    &#10022;
+                </span>
+                </div>
+                <span class="emphasis">
+                    dream
+                </span>
+                <div id="constellation2">
+                    <span class="star1">
+                    &#10022;
+                </span>
+                <span class="star2">  
+                    &#10022;
+                </span>
+                    <span class="star3">  
+                    &#10022;
+                </span>
+                </div>
+            </span>
+        </h2>
 
-    <p>When applying for internships/jobs, Computer Science students may find 
-        themselves sending out hundreds of applications. DreamOffer, a 
-        Job Application Tracking database driven web application, helps 
-        applicants keep track of where they have applied already and when their 
-        applications were sent in an organized and simple to use system. 
-        DreamOffer stores data for hundreds of applicants from various backgrounds. 
-        It also stores data for thousands of different applications for hundreds 
-        of companies, and there is still room for growth in these numbers. When 
-        Applicants record new Applications with our database, they record which 
-        Positions at which Companies they applied for, and who the CompanyRecruiters
-        are for those Positions.
-    </p>
+        <p class="home-description">When applying for internships/jobs, Computer Science students may find 
+            themselves sending out hundreds of applications. DreamOffer, a 
+            Job Application Tracking database driven web application, helps 
+            applicants keep track of where they have applied already and when their 
+            applications were sent in an organized and simple to use system. 
+            DreamOffer stores data for hundreds of applicants from various backgrounds. 
+            It also stores data for thousands of different applications for hundreds 
+            of companies, and there is still room for growth in these numbers. When 
+            Applicants record new Applications with our database, they record which 
+            Positions at which Companies they applied for, and who the CompanyRecruiters
+            are for those Positions.
+        </p>
+    </div>
 
     <h3>Pages/Entities</h3>
     <p>Applicants, Applications, and Companies entities have full CRUD functionality - SELECT, INSERT, UPDATE, DELETE.</p>
