add navbar styles

--- a/templates/search_application.j2
+++ b/templates/search_application.j2
@@ -5,14 +5,16 @@
 </head>
 
 <body>
-
-<h1>Applications</h1>
-
-    <a href="/">Home</a> |
-    <a href="/applicants">Applicants</a> |
-    <a href="/applications">Applications</a> |
-    <a href="/companies">Companies</a> |
-    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a></p>
+    <div class="header">
+        <h1>Applications</h1>
+        <div class="navbar">
+            <a href="/">Home</a> |
+            <a href="/applicants">Applicants</a> |
+            <a href="/applications">Applications</a> |
+            <a href="/companies">Companies</a> |
+            <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a>
+        </div>
+    </div>
 
 <!-- BROWSE -->
     <div id='searchApplication'>
