--- a/templates/search_positions.j2
+++ b/templates/search_positions.j2
@@ -7,13 +7,20 @@
 <body>
     <div class="header">
         <h1>Positions</h1>
+        <div class="navbar">
+            <a href="/">Home</a> |
+            <a href="/applicants">Applicants</a> |
+            <a href="/applications">Applications</a> |
+            <a href="/companies">Companies</a> |
+            <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a>
+        </div>
     </div>
 
     <a href="/">Home</a> |
     <a href="/applicants">Applicants</a> |
     <a href="/applications">Applications</a> |
     <a href="/companies">Companies</a> |
-    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a></p>
+    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a>
 
     <!-- BROWSE -->
     <div id='searchPositions'>
