add condition for displaying empty table

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -101,6 +101,12 @@
                 </tr>
             {% endfor %}
             </tbody>
+        {% else %}
+            <tbody>
+                <tr>
+                    <td></td>
+                </tr>
+            </tbody>
         {% endif %}
         </table>
         <p>&nbsp;</p>
