--- a/templates/applications.j2
+++ b/templates/applications.j2
@@ -76,7 +76,7 @@
                 </tr>
             </thead>
 
-            {% if data %}
+        {% if data %}
             <tbody>
             <!-- Iterate through every item in data -->
             {% for item in data %}
@@ -111,6 +111,12 @@
                 {% endfor %}
                 </tr>
             {% endfor %}
+            </tbody>
+        {% else %}
+            <tbody>
+                <tr>
+                    <td></td>
+                </tr>
             </tbody>
         {% endif %}
 
