--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -136,6 +136,12 @@
                 </tr>
             {% endfor %}
             </tbody>
+        {% else %}
+            <tbody>
+                <tr>
+                    <td></td>
+                </tr>
+            </tbody>
         {% endif %}
         </table>
         <a class="btn-anchor" href="#" onClick="searchCompany()">
@@ -184,6 +190,12 @@
                 </tr>
             {% endfor %}
             </tbody>
+        {% else %}
+            <tbody>
+                <tr>
+                    <td></td>
+                </tr>
+            </tbody>
         {% endif %}
         </table>
         <p>&nbsp;</p>
@@ -228,6 +240,12 @@
                 {% endfor %}
                 </tr>
             {% endfor %}
+            </tbody>
+        {% else %}
+            <tbody>
+                <tr>
+                    <td></td>
+                </tr>
             </tbody>
         {% endif %}
         </table>
