--- a/templates/search_positions.j2
+++ b/templates/search_positions.j2
@@ -38,7 +38,7 @@
                 </tr>
             </thead>
 
-
+        {% if search_data %}
             <tbody>
             <!-- Iterate through every item in data -->
             {% for item in search_data %}
@@ -50,7 +50,13 @@
                 </tr>
             {% endfor %}
             </tbody>
-
+        {% else %}
+            <tbody>
+                <tr>
+                    <td></td>
+                </tr>
+            </tbody>
+        {% endif %}
         </table>
 
         <!-- Return to All Applications Button -->
