--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -103,7 +103,7 @@
             <thead>
                 <tr>
                     <th>
-                        <button class="new-btn" onClick="newPosition()">New</button>
+                        <button class="new-btn" onClick="newPosition()">New Position</button>
                     </th>
                     <th>Company</th>
                     <th>Title</th>
@@ -156,7 +156,7 @@
             <thead>
                 <tr>
                     <th>
-                        <button class="new-btn" onClick="newAffiliation()">New</button>
+                        <button class="new-btn" onClick="newAffiliation()">New Affiliation</button>
                     </th>
                     <th>Company</th>
                     <th>Title</th>
@@ -207,7 +207,7 @@
             <thead>
                 <tr>
                     <th>
-                        <button class="new-btn" onClick="newRecruiter()">New</button>
+                        <button class="new-btn" onClick="newRecruiter()">New Recruiter</button>
                     </th>
                     <th>Name</th>
                     <th>Email</th>
